# SCFTP

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
test/: test_request_with_group.py
tunnel_proxy/: config.yaml  proxy_base.py  proxy_groups.yaml.example  tunnel_proxy.py
